# downtime

./: Cargo.toml  README.md
src/: checker.rs  cli.rs  main.rs  store.rs
