[package]
name = "downtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
futures = "0.3.28"
reqwest = "0.11.16"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.27.0", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
